--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,43 @@
+/*simple reset */
+
+body {
+  margin: 0;
+  padding: 0
+
+}
+
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
+article {
+  background: green;
+  padding: 10px
+}
+
+.grid-pad {
+  padding: 20px 0 20px 20px;
+}
+
 [class*='col-'] {
   float: left;
+  padding-right: 20px;
+}
+
+[class*='col-']:last-of-type {
+  padding-right: 0;
 }
 
 .col-2-3 {
   width: 66.66%;
 }
+
 .col-1-3 {
   width: 33.33%;
+}
+
+.grid:after {
+  content: "";
+  display: table;
+  clear: both;
 }
