--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  padding: 0
+  padding: 0;
 
 }
 
@@ -12,11 +12,15 @@ body {
 
 article {
   background: green;
-  padding: 10px
+  padding: 10px;
 }
 
 .grid-pad {
   padding: 20px 0 20px 20px;
+}
+
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
 }
 
 [class*='col-'] {
@@ -35,6 +39,7 @@ article {
 .col-1-3 {
   width: 33.33%;
 }
+
 
 .grid:after {
   content: "";
