--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@ body {
 
 }
 
+body {
+  margin: 0 auto;
+  width: 80%;
+  background-color: green;
+}
+
+
 *, *:after, *:before {
   box-sizing: border-box;
 }
@@ -13,6 +20,11 @@ body {
 article {
   background: green;
   padding: 10px;
+}
+
+nav {
+  float: right;
+  margin-right: 40px;
 }
 
 .grid-pad {
